fix container paddings on mobile screens

--- a/src/pages/trade/ui/trade-content/components/Container/Container.module.css
+++ b/src/pages/trade/ui/trade-content/components/Container/Container.module.css
@@ -4,4 +4,8 @@
   background-color: var(--color-black);
   width: 100%;
   height: 100%;
+
+  @media screen and (max-width: 600px) {
+    padding: 32px 20px !important;
+  }
 }
