--- a/src/pages/trade/ui/trade-content/components/TradeChart/TradeChart.module.css
+++ b/src/pages/trade/ui/trade-content/components/TradeChart/TradeChart.module.css
@@ -1,10 +1,21 @@
 .chartContainer {
   height: 610px;
+
+  @media screen and (max-width: 600px) {
+    height: 541px;
+  }
+}
+.tradeChartWrapper {
+  flex-wrap: nowrap;
 }
 .tradeChartTitle {
   color: white;
   font-size: 32px;
   font-weight: 700;
+
+  @media screen and (max-width: 600px) {
+    font-size: 28px;
+  }
 }
 
 .periodButton {
